--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,7 @@
     </div>
 
     <footer>
-      <p>Project by Adarsh</p>
+      <p>Project by Adarsh with ❤️</p>
     </footer>
   </div>
   <script src="popup.js"></script>
